- Make local MySQL connection default to unix socket on Linux or enable   to use named pipe on Windows by specifying the host as '.'   This addresses MDEV-5952. modified:   storage/connect/myconn.cpp

- Clean some unused code
modified:
  storage/connect/connect.cc
  storage/connect/connect.h
  storage/connect/ha_connect.cc
  storage/connect/ha_connect.h